--- a/1-resources.html
+++ b/1-resources.html
@@ -58,6 +58,53 @@ header-img: "img/post-bg-rwd.jpg"
 <li><a href="{{site.baseurl}}/files/pandas官方文档中文版.pdf">pandas官方文档中文版</a></li>
 -->
 <li>开学第一讲</li>
+<li>
+    <style type="text/css">
+        .tg  {border-collapse:collapse;border-color:#aaa;border-spacing:0;}
+        .tg td{background-color:#fff;border-color:#aaa;border-style:solid;border-width:1px;color:#333;
+          font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+        .tg th{background-color:#f38630;border-color:#aaa;border-style:solid;border-width:1px;color:#fff;
+          font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+        .tg .tg-0lax{text-align:left;vertical-align:top}
+        </style>
+        <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-0lax">No</th>
+            <th class="tg-0lax">内容</th>
+            <th class="tg-0lax">链接</th>
+            <th class="tg-0lax">发布时间</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+          </tr>
+          <tr>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+          </tr>
+          <tr>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+          </tr>
+          <tr>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+            <td class="tg-0lax"></td>
+          </tr>
+        </tbody>
+        </table>
+
+</li>
 </ul>
 
 <h3 id="toc_3">推荐访问的网站</h3>
