--- a/1-resources.html
+++ b/1-resources.html
@@ -50,7 +50,7 @@ header-img: "img/post-bg-rwd.jpg"
 <li>Memrise教程</li>
 </ul>
 
-<h3 id="toc_2">计算机视觉课程资源</h3>
+<h3 id="toc_2">2022-2023学年春季学期</h3>
 
 <ul>
     <!-- 这是一段注释 
